syntax = "proto3";

package org.hse.nnbuilder.services;

import "enums.proto";

enum LayerType {
  InputCell = 0;
  BackfedInputCell = 1;
  NoisyInputCell = 2;
  HiddenCell = 3;
  ProbablisticHiddenCell = 4;
  SpikingHiddenCell = 5;
  CapculeCell = 6;
  OutputCell = 7;
  MatchInputOutputCell = 8;
  RecurrentCell = 9;
  MemoryCell = 10;
  GatedMemoryCell = 11;
  Kernel = 12;
  ConvolutionalOrPool = 13;
  Undefined = 14;
}

/**
 * https://towardsdatascience.com/activation-functions-neural-networks-1cbd9f8d91d6
 * Site with most used Activation functions
 */
enum ActivationFunction {
  None = 0;
  Linear = 1;
  Sigmoid = 2;
  Tanh = 3;
  ReLU = 4;
  LeakyReLU = 5;
  Max = 6;
  BinaryStep = 7;
  Gaussian = 8;
}

service NNModificationService {
  rpc createnn (NNCreationRequest) returns (NNCreationResponse);
  rpc modifynn (NNModificationRequest) returns (NNModificationResponse);
}

// Modification neural network
message NNModificationRequest {
  int64 nnId = 1;
  oneof nnmodification {
    AddLayer addLayer = 2;
    DelLayer delLayer = 3;
    ChangeActivationFunction changeActivationFunction = 4;
    ChangeNumberOfNeuron changeNumberOfNeuron = 5;
  }
}

message NNModificationResponse {
  string exception = 1;
}

message AddLayer {
  int32 index = 1;
  LayerType lType = 2;
}

message DelLayer {
  int32 index = 1;
}

message ChangeActivationFunction {
  int32 index = 1;
  ActivationFunction f = 2;
}

message ChangeNumberOfNeuron {
  int32 index = 1;
  int64 number = 2;
}

// Creating new neural network
message NNCreationRequest {
  string name = 1;
  NetworkType nnType = 2;
  ActionType actionType = 3;
}

message NNCreationResponse {
  int64 nnId = 1;
}
